--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             </ul>
         </div>
         <p class="page-credits">
-            &copy; JANE STUDENT, 2015. 
+            &copy; JOHN MEYER, 2018. 
     </footer>
 </body>
 
